syntax = "proto3";
package proto;
option go_package = "github.com/anthdm/raptor/proto";
import "actor.proto";

message HTTPRequest {
	bytes Body = 1;
	string Method = 2;
	string URL = 3;
	string EndpointID = 4;
	string ID = 5;
	map<string, HeaderFields> Header = 6;
	string runtime = 7;
	string DeploymentID = 8;
	map<string, string> Env = 9;
	bool preview = 10;
} 

message HeaderFields {
	repeated string fields = 1;
}

message HTTPResponse {
	bytes response = 1;
	int32 statusCode = 2;
	string RequestID = 3;
}

message AddRuntime {
	string key = 1;
	actor.PID PID = 2;
}

message RemoveRuntime {
	string key = 1;
}